# codebooks

./: .coverage  .gitignore  README.md  plan.md  pyproject.toml
.claude/: launch.json
models/: glimpse_p32.json  glimpse_p32.npz  glimpse_p32_codec.npz  prism_p32_K1.npz  prism_p32_K2.npz  prism_p32_K4.npz  prism_p32_K4_noE.npz  prism_p32_K8.npz
paper/: 00README.json  main.bib  main.tex
plans/: plan.md  plan_figures.md  plan_fixing.md  plan_further.md  plan_high_rank.md  plan_search.md  test_failure_remediation_report.md
results/: f1.md  f2.md  fig_01_se_vs_snr.json  fig_01_se_vs_snr.md  fig_02_rate_distortion.json  fig_02_rate_distortion.md  fig_03_overhead_breakdown.json  fig_03_overhead_breakdown.md  fig_04_overhead_scaling.json  fig_04_overhead_scaling.md  fig_05_mobility.json  fig_05_mobility.md  fig_06_mu_mimo.json  fig_06_mu_mimo.md  fig_07_rank_adaptation.json  fig_07_rank_adaptation.md  fig_08_channel_sensitivity.json  fig_08_channel_sensitivity.md  fig_09_port_selection.json  fig_09_port_selection.md  fig_10_array_scaling.json  fig_10_array_scaling.md  fig_11_frequency_granularity.json  fig_11_frequency_granularity.md  fig_12_summary.json  fig_12_summary.md  fig_12_summary_table.md  fig_13_new_codebooks.json
scripts/: cdl_fig_02_rate_distortion.py  cdl_fig_04_overhead_scaling.py  cdl_fig_07_rank_adaptation.py  cdl_fig_10_array_scaling.py  cdl_fig_11_frequency_granularity.py  cdl_fig_12_summary.py  cdllib.py  check.sh  compare_schemes.py  fig_01_se_vs_snr.py  fig_03_overhead_breakdown.py  fig_04_overhead_scaling.py  fig_05_mobility.py  fig_06_mu_mimo.py  fig_07_rank_adaptation.py  fig_08_channel_sensitivity.py  fig_09_port_selection.py  fig_10_array_scaling.py  fig_12_summary.py  figlib.py  make_all_figures.py  repro_qin_fig05_etype2_overhead.py  repro_qin_fig07_ps_overhead.py  repro_qin_table1_overhead.py  reproduce_f1.py  sionna_cdl_compare.py
specs/: 38.211-v19.4.0.md  38.212-v19.4.0.md  38.213-v19.4.0.md  38.214-v19.4.0.md  38214-i00.md
tests/: __init__.py  paper_oracles.py  test_baselines_appendix.py  test_compression_properties.py  test_config_tables.py  test_dft_bases.py  test_equivalences.py  test_etype2_r16.py  test_eval_spine.py  (+18 more)
(+321 files in other folders)
