[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-csi"
version = "0.1.0"
description = "3GPP NR PMI codebook benchmark framework (R15-R18): Type I/II, eType II, FeType II PS, Doppler codebooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
sionna = [
    "sionna>=1.0",
    "tensorflow>=2.16",
]
dataset = [
    "h5py>=3.10",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E731: lambdas are used for tiny inline predicates.
# E741: l/m/v are the paper's own symbol names (layer, beam indices).
ignore = ["E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/integration/test_sionna_integration.py" = ["E402"]  # imports after importorskip

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running statistical reproduction tests (deselect with '-m \"not slow\"')",
    "sionna: requires the optional sionna/tensorflow extra",
]
